--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.mybatis.spring.boot</groupId>
-			<artifactId>mybatis-spring-boot-starter</artifactId>
-			<version>1.3.2</version>
-		</dependency>
 
 		<dependency>
 			<groupId>mysql</groupId>
@@ -88,6 +83,12 @@
 			<groupId>com.101tec</groupId>
 			<artifactId>zkclient</artifactId>
 			<version>0.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.haoze</groupId>
+			<artifactId>haoze.framework</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
 	</dependencies>
